# routestack

./: .dockerignore  .env-defaults  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.test.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_create_persistence_tables.py  0002_create_admin_users.py  0003_create_subscription_revisions.py  0004_create_audit_records.py  0005_create_outbox_messages.py
src/: config.py  containers.py  main.py  manage.py
src/api/rest/: app.py  cookies.py  healthcheck.py  routers.py  session.py
src/app_layer/: exceptions.py
src/app_layer/admins/: __init__.py  auth.py  exceptions.py
src/app_layer/operations/: __init__.py  worker.py
src/app_layer/ports/: __init__.py  admins.py  repositories.py  security.py  unit_of_work.py
src/application/: settings.py
src/application/admins/: __init__.py  auth.py  services.py
src/application/ports/: __init__.py  repositories.py  unit_of_work.py
src/bot/: __init__.py
src/domain/: __init__.py
src/domain/access_grants/: access_grant.py  enums.py
src/domain/admins/: __init__.py  admin_user.py
src/domain/clients/: client.py
src/domain/operations/: audit.py  enums.py  operation.py  outbox.py
src/domain/shared/: __init__.py  entity.py  entity_id.py  errors.py  events.py  time.py  timestamps.py  types.py  validation.py  value_enums.py
src/domain/subscriptions/: enums.py  revision.py  subscription.py
src/infra/db/: __init__.py  models.py  sqlite.py  unit_of_work.py
src/infra/queue/: __init__.py
src/infra/security/: __init__.py  password_hasher.py  tokens.py
src/infrastructure/: __init__.py  container.py
src/infrastructure/db/: __init__.py  base.py  mappers.py  (+4 more)
src/outbox/: settings.py  tasks.py
src/presentation/: __init__.py
src/worker/: __init__.py  tasks.py
tests/: fakes.py
tests/integration/: conftest.py  test_alembic_migrations.py  test_http_admin_auth.py  test_http_health.py
tests/unit/: test_container.py  test_http_cli.py  test_main.py  test_settings.py
(+61 files in other folders)
