[project]
name = "deorz-vpn-panel"
version = "0.1.0"
description = "Web panel to manage VPN protocols"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "alembic>=1.14.0",
    "dependency-injector>=4.48.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "bcrypt>=5.0.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
    "arq>=0.28.0",
    "redis>=5.3.1",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "httpx>=0.28.0",
    "pyrefly>=0.43.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RET", "RUF"]
ignore = [
    # FastAPI dependency defaults intentionally call helper constructors.
    "B008",
]


[tool.pyrefly]
project-includes = ["src"]
project-excludes = ["tests"]
search-path = ["src"]
python-version = "3.13"
